--- a/Throw And Eat/Assembly-CSharp-vs.csproj
+++ b/Throw And Eat/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
      <Compile Include="Assets\Scripts\Player\Controller.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Application/Unity3D/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
