Add enemy dying animation and gingerbread model

--- a/Throw And Eat/Assembly-CSharp-vs.csproj
+++ b/Throw And Eat/Assembly-CSharp-vs.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\Scripts\Enemy\Health.cs" />
      <Compile Include="Assets\Scripts\Player\Controller.cs" />
      <Compile Include="Assets\Scripts\Player\Throw.cs" />
+     <Compile Include="Assets\Scripts\Player\ThrowSimpleGun.cs" />
      <Compile Include="Assets\Scripts\ThrownProjectile.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Application/Unity3D/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
