--- a/Throw And Eat/Assembly-CSharp.csproj
+++ b/Throw And Eat/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Enemy\Cookie.cs" />
      <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
      <Compile Include="Assets\Scripts\Enemy\Health.cs" />
      <Compile Include="Assets\Scripts\Player\Controller.cs" />
