--- a/Throw And Eat/Assembly-CSharp-vs.csproj
+++ b/Throw And Eat/Assembly-CSharp-vs.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\LookAt.cs" />
+     <Compile Include="Assets\Scripts\Ammo.cs" />
+     <Compile Include="Assets\Scripts\AmmoPickup.cs" />
      <Compile Include="Assets\Scripts\Enemy\Cookie.cs" />
      <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
      <Compile Include="Assets\Scripts\Enemy\Health.cs" />
