--- a/Throw And Eat/Assembly-CSharp-vs.csproj
+++ b/Throw And Eat/Assembly-CSharp-vs.csproj
@@ -49,10 +49,14 @@
      <Compile Include="Assets\LookAt.cs" />
      <Compile Include="Assets\Scripts\Ammo.cs" />
      <Compile Include="Assets\Scripts\AmmoPickup.cs" />
+     <Compile Include="Assets\Scripts\CursorMannager.cs" />
      <Compile Include="Assets\Scripts\Enemy\Cookie.cs" />
      <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Eye.cs" />
      <Compile Include="Assets\Scripts\Enemy\Health.cs" />
+     <Compile Include="Assets\Scripts\NomNomCrosshairs.cs" />
      <Compile Include="Assets\Scripts\Player\Controller.cs" />
+     <Compile Include="Assets\Scripts\Player\Eat.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerHealth.cs" />
      <Compile Include="Assets\Scripts\Player\Throw.cs" />
      <Compile Include="Assets\Scripts\Player\ThrowSimpleGun.cs" />
